--- a/src/style.css
+++ b/src/style.css
@@ -2,14 +2,32 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(240, 240, 240);
 }
 
 header {
-    margin: 10em auto;
+    margin: 8em auto;
 }
 
 #title, #description {
     text-align: center;
     margin: 8px;
+}
+
+form {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+fieldset {
+    border-radius: 8px;
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+    background-color: white;
+    margin: 0 2px;
+    padding: 16px;
+}
+
+fieldset:not(:last-of-type) {
+    margin-bottom: 20px;
 }
