--- a/src/style.css
+++ b/src/style.css
@@ -32,17 +32,29 @@ fieldset {
     margin-bottom: 20px;
 }
 
+::placeholder {
+    font-family: 'Roboto', sans-serif;
+}
+
 label {
     display: block;
     font-weight: 500;
 }
 
-label:not(:last-of-type) {
+label:not(:last-of-type), .radio-group {
     margin-bottom: 20px;
 }
 
+label.radio-question, label.checkbox-question {
+    margin-bottom: 4px;
+}
 
-input, textarea {
+label.radio-label, label.checkbox-series {
+    margin-bottom: 0px;
+    font-weight: normal;
+}
+
+input, textarea, select, .radio-group, .checkbox-series {
     width: 98%;
     min-height: 3em;
     margin-top: 4px;
@@ -64,7 +76,6 @@ input:focus, textarea:focus, select:focus {
 
 /* Custom checkbox ~ start*/
 .checkbox-series {
-    display: block;
     position: relative;
     padding-left: 26px;
     margin-bottom: 12px;
@@ -73,6 +84,9 @@ input:focus, textarea:focus, select:focus {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+
+    display: flex;
+    align-items: center; 
 }
 
 .checkbox-series input {
@@ -85,7 +99,7 @@ input:focus, textarea:focus, select:focus {
 
 .checkmark {
     position: absolute;
-    top: 0;
+    top: 16px;
     left: 0;
     height: 16px;
     width: 16px;
