--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+:root {
+    --accent-blue-color: #1e5aff;
+    --default-grey-color: #dadce0;
+    --accent-grey-color: #b2b4b8;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: rgb(240, 240, 240);
@@ -61,17 +67,17 @@ input, textarea, select, .radio-group, .checkbox-series {
 }
 
 input, textarea, select {
-    border: 1px solid #dadce0;
+    border: 1px solid var(--default-grey-color);
     border-radius: 4px;
     outline: none;
 }
 
 input:hover, textarea:hover, select:hover {
-    border-color: #b2b4b8;
+    border-color: var(--accent-grey-color);
 }
 
 input:focus, textarea:focus, select:focus {
-    border: 1px solid #1e5aff;
+    border: 1px solid var(--accent-blue-color);
 }
 
 /* Custom checkbox ~ start*/
@@ -104,17 +110,17 @@ input:focus, textarea:focus, select:focus {
     height: 16px;
     width: 16px;
     background-color: white;
-    border: 1px solid #dadce0;
+    border: 1px solid var(--default-grey-color);
     border-radius: 4px;
 }
 
 .checkbox-series:hover input~.checkmark {
-    border-color: #b2b4b8;
+    border-color: var(--accent-grey-color);
 }
 
 .checkbox-series input:checked~.checkmark {
-    background-color: #1e5aff;
-    border-color: #1e5aff;
+    background-color: var(--accent-blue-color);
+    border-color: var(--accent-blue-color);
 }
 
 .checkmark:after {
@@ -152,7 +158,7 @@ input[type="submit"] {
     min-height: 0;
     height: 40px;
     color: white;
-    background-color: #1e5aff;
+    background-color: var(--accent-blue-color);
     font-size: 1em;
     padding: none;
     border: none;
