--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,7 @@ label.radio-label, label.checkbox-series {
     font-weight: normal;
 }
 
-input, textarea, select, .radio-group, .checkbox-series {
+input, textarea, select, .radio-group, .checkbox-series, .radio-label {
     width: 98%;
     min-height: 3em;
     margin-top: 4px;
@@ -92,7 +92,7 @@ input:focus, textarea:focus, select:focus {
     user-select: none;
 
     display: flex;
-    align-items: center; 
+    align-items: center;
 }
 
 .checkbox-series input {
@@ -146,6 +146,77 @@ input:focus, textarea:focus, select:focus {
 }
 
 /* Custom checkbox ~ end*/
+
+/* Custom radio */
+.radio-label {
+    display: block;
+    position: relative;
+    padding-left: 26px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    display: flex;
+    align-items: center;
+}
+
+.radio-label input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.radiomark {
+    position: absolute;
+    top: 16px;
+    left: 0;
+    height: 16px;
+    width: 16px;
+    border: 1px solid var(--default-grey-color);
+    border-radius: 50%;
+}
+
+.radio-label:hover input~.radiomark {
+    border-color: var(--accent-grey-color);
+}
+
+.radio-label input:checked~.radiomark {
+    background-color: var(--accent-blue-color);   
+    border-color: var(--accent-blue-color);
+    transition: 240ms background-color ease-in-out;
+}
+
+.radiomark:after {
+    content: "";
+    position: absolute;
+    display: none;    
+}
+
+.radio-label input:checked + .radio-label {
+    font-weight: bold;
+}
+
+.radio-label input:checked~.radiomark:after {
+    display: block;
+}
+
+.radio-label .radiomark:after {
+    left: 6px;
+    top: 3px;
+    width: 3px;
+    height: 6px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+/* Custom radio ~ end */
 
 input[type="checkbox"], input[type="radio"] {
     width: unset;
