--- a/src/style.css
+++ b/src/style.css
@@ -272,7 +272,7 @@ footer div {
 footer div a {
     display: flex;
     align-items: center;
-    padding-left: 8px;
+    margin-left: 8px;
 }
 
 footer div a img {
